fixed whitespace/ & did formatting

--- a/ufswamphackathon2021/src/components/Header/Header.css
+++ b/ufswamphackathon2021/src/components/Header/Header.css
@@ -8,6 +8,7 @@
 	margin-left: 35px;
 	margin-right: 30px;
 	margin-top: 40px;
+	text-decoration: none;
 
 }
 
